--- a/Sliding_window/CNN_MFCC_completed.ipynb
+++ b/Sliding_window/CNN_MFCC_completed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7e75e7a1-9ddd-4734-8ff9-424dee2dfc23",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "8b995d86-ca8f-4071-ad58-cddd7ffc7d2c",
    "metadata": {},
    "outputs": [
@@ -59,10 +59,10 @@
    "source": [
     "DATA_type = 'MFCC_cnn_1'\n",
     "Model_name = 'CNN_MFCC_1'\n",
-    "Train_data=np.load(f'../Make&stored_DATA/{DATA_type}/Train_data.npy')\n",
-    "Train_lebel=np.load(f'../Make&stored_DATA/{DATA_type}/Train_lebel.npy')\n",
-    "Val_data=np.load(f'../Make&stored_DATA/{DATA_type}/Val_data.npy')\n",
-    "Val_lebel=np.load(f'../Make&stored_DATA/{DATA_type}/Val_lebel.npy')\n",
+    "Train_data=np.load(f'../Make_stored_DATA/{DATA_type}/Train_data.npy')\n",
+    "Train_lebel=np.load(f'../Make_stored_DATA/{DATA_type}/Train_lebel.npy')\n",
+    "Val_data=np.load(f'../Make_stored_DATA/{DATA_type}/Val_data.npy')\n",
+    "Val_lebel=np.load(f'../Make_stored_DATA/{DATA_type}/Val_lebel.npy')\n",
     "print(np.shape(Train_data))\n",
     "print(np.shape(Train_lebel))\n",
     "print(np.shape(Val_data))\n",
@@ -415,7 +415,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "tensorflowgpu",
    "language": "python",
    "name": "python3"
   },
