--- a/Make_stored_DATA/mfcc_cnn_1.ipynb
+++ b/Make_stored_DATA/mfcc_cnn_1.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e2912ce2-8983-4c2e-ac83-db53af6b6bf7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_type = 'MFCC_cnn_1'\n",
+    "DATA_type = 'mfcc_cnn_1'\n",
     "sample_rate = 22050\n",
     "n_fft, n_hop_length = 512, 512\n",
     "window_size, hop_length = int(sample_rate*1.0), sample_rate/4\n",
