--- a/Sliding_window/CNN_MFCC_completed.ipynb
+++ b/Sliding_window/CNN_MFCC_completed.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8b995d86-ca8f-4071-ad58-cddd7ffc7d2c",
    "metadata": {},
    "outputs": [
@@ -57,12 +57,12 @@
     }
    ],
    "source": [
-    "DATA_type = 'MFCC_cnn_1'\n",
-    "Model_name = 'CNN_MFCC_1'\n",
-    "Train_data=np.load(f'../Make_stored_DATA/{DATA_type}/Train_data.npy')\n",
-    "Train_lebel=np.load(f'../Make_stored_DATA/{DATA_type}/Train_lebel.npy')\n",
-    "Val_data=np.load(f'../Make_stored_DATA/{DATA_type}/Val_data.npy')\n",
-    "Val_lebel=np.load(f'../Make_stored_DATA/{DATA_type}/Val_lebel.npy')\n",
+    "DATA_type = 'mfcc_cnn_1'\n",
+    "Model_name = 'cnn_mfcc_1'\n",
+    "Train_data=np.load(f'../make_stored_data/{DATA_type}/Train_data.npy')\n",
+    "Train_lebel=np.load(f'../make_stored_data/{DATA_type}/Train_lebel.npy')\n",
+    "Val_data=np.load(f'../make_stored_data/{DATA_type}/Val_data.npy')\n",
+    "Val_lebel=np.load(f'../make_stored_data/{DATA_type}/Val_lebel.npy')\n",
     "print(np.shape(Train_data))\n",
     "print(np.shape(Train_lebel))\n",
     "print(np.shape(Val_data))\n",
