--- a/Sliding_window/cnn_mfcc_final_cleaned.ipynb
+++ b/Sliding_window/cnn_mfcc_final_cleaned.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics import recall_score, precision_score, confusion_matrix\n",
     "import os\n",
     "import gc\n",
     "import glob\n",
@@ -61,11 +62,11 @@
     "DATA_type = 'mfcc_cnn_1'\n",
     "Model_name = 'cnn_mfcc_1'\n",
     "Train_data=np.load(f'../make_stored_data/{DATA_type}/Train_data.npy')\n",
-    "Train_lebel=np.load(f'../make_stored_data/{DATA_type}/Train_lebel.npy')\n",
+    "Train_label=np.load(f'../make_stored_data/{DATA_type}/Train_label.npy')\n",
     "Val_data=np.load(f'../make_stored_data/{DATA_type}/Val_data.npy')\n",
     "Val_lebel=np.load(f'../make_stored_data/{DATA_type}/Val_lebel.npy')\n",
     "print(np.shape(Train_data))\n",
-    "print(np.shape(Train_lebel))\n",
+    "print(np.shape(Train_label))\n",
     "print(np.shape(Val_data))\n",
     "print(np.shape(Val_lebel))"
    ]
@@ -394,13 +395,13 @@
     "results = []\n",
     "best_model = None\n",
     "best_model_config_id = None\n",
-    "best_model_recall = 0\n",
+    "unused_best_model_recall = 0\n",
     "\n",
     "for i, (batch_size, lr, hidden_size, dropout_rate, kernel_reg) in enumerate(param_combinations):\n",
     "    fold_recalls = []\n",
     "    fold_f2_scores = []\n",
-    "    fold_best_histories = []\n",
-    "    fold_best_cms = []\n",
+    "    fold_histories = []\n",
+    "    fold_conf_matrices = []\n",
     "\n",
     "    for fold in range(5):\n",
     "        print(f\"Running config {i+1}/{len(param_combinations)}\")\n",
@@ -413,7 +414,7 @@
     "        print(\"-\" * 40)\n",
     "        print(f\"Fold : {fold+1}\")\n",
     "        X_train, X_val = Train_data[fold], Train_data[fold]\n",
-    "        y_train, y_val = Train_lebel[fold], Train_lebel[fold]\n",
+    "        y_train, y_val = Train_label[fold], Train_label[fold]\n",
     "\n",
     "        tf.keras.backend.clear_session()\n",
     "\n",
@@ -463,10 +464,10 @@
     "\n",
     "        fold_recalls.append(best_recall)\n",
     "        fold_f2_scores.append(best_f2)\n",
-    "        fold_best_histories.append(history)\n",
+    "        fold_histories.append(history)\n",
     "        y_pred = (model.predict(X_val, verbose=0) > 0.3).astype(\"int32\")\n",
     "        cm = confusion_matrix(y_val, y_pred)\n",
-    "        fold_best_cms.append((cm, y_val, y_pred))\n",
+    "        fold_conf_matrices.append((cm, y_val, y_pred))\n",
     "        \n",
     "        clear_output(wait=True)\n",
     "\n",
@@ -474,8 +475,8 @@
     "    avg_f2 = np.mean(fold_f2_scores)\n",
     "    avg_recall = np.mean(fold_recalls)\n",
     "\n",
-    "    best_history = fold_best_histories[best_fold]\n",
-    "    best_cm, best_y_val, best_y_pred = fold_best_cms[best_fold]\n",
+    "    best_history = fold_histories[best_fold]\n",
+    "    best_cm, best_y_val, best_y_pred = fold_conf_matrices[best_fold]\n",
     "\n",
     "    results.append({\n",
     "        'config_id': i,\n",
@@ -485,9 +486,9 @@
     "        'dropout': dropout_rate,\n",
     "        'kernel_reg': kernel_reg,\n",
     "        'avg_val_recall': avg_recall,\n",
-    "        'best_fold_recall': fold_recalls[best_fold],\n",
+    "        'best_recall': fold_recalls[best_fold],\n",
     "        'avg_val_f2': avg_f2,\n",
-    "        'best_fold_f2': fold_f2_scores[best_fold],\n",
+    "        'best_f2': fold_f2_scores[best_fold],\n",
     "        'history': best_history,\n",
     "        'confusion_matrix': best_cm\n",
     "    })\n",
@@ -548,7 +549,7 @@
     "print(f\"Dropout Rate        : {best_result['dropout']}\")\n",
     "print(f\"Kernel Reg L2       : {best_result['kernel_reg']}\")\n",
     "print(f\"Avg Recall (5-fold) : {best_result['avg_val_recall']:.4f}\")\n",
-    "print(f\"Best Fold Recall    : {best_result['best_fold_recall']:.4f}\")\n",
+    "print(f\"Best Fold Recall    : {best_result['best_recall']:.4f}\")\n",
     "print(\"-\" * 40)\n",
     "\n",
     "best_history = best_model['history']\n",
