--- a/Sliding_window/cnn_mfcc_finished.ipynb
+++ b/Sliding_window/cnn_mfcc_finished.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8744513c-16e3-476e-92db-44dc9c909fbc",
    "metadata": {},
    "outputs": [
@@ -412,8 +412,8 @@
     "        print(f\"  Kernel Reg L2  : {kernel_reg}\")\n",
     "        print(\"-\" * 40)\n",
     "        print(f\"Fold : {fold+1}\")\n",
-    "        X_train, X_val = Train_data[fold], Train_data[fold]\n",
-    "        y_train, y_val = Train_label[fold], Train_label[fold]\n",
+    "        X_train, X_val = Train_data[fold], Val_data[fold]\n",
+    "        y_train, y_val = Train_label[fold], Val_label[fold]\n",
     "\n",
     "        tf.keras.backend.clear_session()\n",
     "\n",
