--- a/Sliding_window/cnn_mels_finished.ipynb
+++ b/Sliding_window/cnn_mels_finished.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8744513c-16e3-476e-92db-44dc9c909fbc",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
       "----------------------------------------\n",
       "Fold : 1\n",
       "Epoch 1/100\n",
-      "486/500 [============================>.] - ETA: 0s - loss: 0.8845 - f2_score: 0.7828"
+      "491/500 [============================>.] - ETA: 0s - loss: 0.8842 - f2_score: 0.7915"
      ]
     },
     {
@@ -171,137 +171,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "500/500 [==============================] - 10s 6ms/step - loss: 0.8822 - f2_score: 0.7844 - val_loss: 0.7887 - val_f2_score: 0.8342 - lr: 1.0000e-04\n",
+      "500/500 [==============================] - 7s 6ms/step - loss: 0.8814 - f2_score: 0.7930 - val_loss: 0.8213 - val_f2_score: 0.8160 - lr: 1.0000e-04\n",
       "Epoch 2/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.6946 - f2_score: 0.8424 - val_loss: 0.6265 - val_f2_score: 0.8867 - lr: 1.0000e-04\n",
+      "500/500 [==============================] - 2s 5ms/step - loss: 0.7039 - f2_score: 0.8413 - val_loss: 0.6489 - val_f2_score: 0.8529 - lr: 1.0000e-04\n",
       "Epoch 3/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.6169 - f2_score: 0.8561 - val_loss: 0.5622 - val_f2_score: 0.8456 - lr: 1.0000e-04\n",
+      "500/500 [==============================] - 2s 5ms/step - loss: 0.6313 - f2_score: 0.8543 - val_loss: 0.6082 - val_f2_score: 0.8778 - lr: 1.0000e-04\n",
       "Epoch 4/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.5666 - f2_score: 0.8655 - val_loss: 0.5103 - val_f2_score: 0.8755 - lr: 1.0000e-04\n",
+      "500/500 [==============================] - 2s 5ms/step - loss: 0.5844 - f2_score: 0.8615 - val_loss: 0.5720 - val_f2_score: 0.8089 - lr: 1.0000e-04\n",
       "Epoch 5/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.5317 - f2_score: 0.8651 - val_loss: 0.4754 - val_f2_score: 0.8778 - lr: 1.0000e-04\n",
+      "500/500 [==============================] - 2s 4ms/step - loss: 0.5411 - f2_score: 0.8609 - val_loss: 0.5326 - val_f2_score: 0.8570 - lr: 1.0000e-04\n",
       "Epoch 6/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.4952 - f2_score: 0.8770 - val_loss: 0.4487 - val_f2_score: 0.8751 - lr: 1.0000e-04\n",
+      "500/500 [==============================] - 2s 5ms/step - loss: 0.5102 - f2_score: 0.8717 - val_loss: 0.5246 - val_f2_score: 0.8905 - lr: 1.0000e-04\n",
       "Epoch 7/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.4656 - f2_score: 0.8824 - val_loss: 0.4230 - val_f2_score: 0.8961 - lr: 1.0000e-04\n",
+      "500/500 [==============================] - 2s 5ms/step - loss: 0.4797 - f2_score: 0.8779 - val_loss: 0.4930 - val_f2_score: 0.8899 - lr: 1.0000e-04\n",
       "Epoch 8/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.4467 - f2_score: 0.8845 - val_loss: 0.3985 - val_f2_score: 0.9226 - lr: 1.0000e-04\n",
+      "500/500 [==============================] - 2s 5ms/step - loss: 0.4571 - f2_score: 0.8836 - val_loss: 0.4741 - val_f2_score: 0.8656 - lr: 1.0000e-04\n",
       "Epoch 9/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.4226 - f2_score: 0.8911 - val_loss: 0.3821 - val_f2_score: 0.9197 - lr: 1.0000e-04\n",
+      "500/500 [==============================] - 2s 5ms/step - loss: 0.4440 - f2_score: 0.8807 - val_loss: 0.4789 - val_f2_score: 0.8132 - lr: 1.0000e-04\n",
       "Epoch 10/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.4106 - f2_score: 0.8931 - val_loss: 0.3651 - val_f2_score: 0.9131 - lr: 1.0000e-04\n",
+      "500/500 [==============================] - 2s 5ms/step - loss: 0.4227 - f2_score: 0.8870 - val_loss: 0.4516 - val_f2_score: 0.8557 - lr: 1.0000e-04\n",
       "Epoch 11/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.3897 - f2_score: 0.8972 - val_loss: 0.3631 - val_f2_score: 0.9301 - lr: 1.0000e-04\n",
+      "500/500 [==============================] - 2s 5ms/step - loss: 0.4071 - f2_score: 0.8892 - val_loss: 0.4409 - val_f2_score: 0.8942 - lr: 1.0000e-04\n",
       "Epoch 12/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.3745 - f2_score: 0.9012 - val_loss: 0.3437 - val_f2_score: 0.9357 - lr: 1.0000e-04\n",
+      "500/500 [==============================] - 2s 5ms/step - loss: 0.3896 - f2_score: 0.8928 - val_loss: 0.4358 - val_f2_score: 0.8779 - lr: 1.0000e-04\n",
       "Epoch 13/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.3606 - f2_score: 0.9022 - val_loss: 0.3482 - val_f2_score: 0.9048 - lr: 1.0000e-04\n",
+      "500/500 [==============================] - 2s 5ms/step - loss: 0.3751 - f2_score: 0.9003 - val_loss: 0.4366 - val_f2_score: 0.8956 - lr: 1.0000e-04\n",
       "Epoch 14/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.3415 - f2_score: 0.9096 - val_loss: 0.3094 - val_f2_score: 0.9011 - lr: 1.0000e-04\n",
+      "500/500 [==============================] - 2s 5ms/step - loss: 0.3635 - f2_score: 0.9025 - val_loss: 0.4392 - val_f2_score: 0.8332 - lr: 1.0000e-04\n",
       "Epoch 15/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.3349 - f2_score: 0.9079 - val_loss: 0.3295 - val_f2_score: 0.8718 - lr: 1.0000e-04\n",
+      "500/500 [==============================] - 2s 5ms/step - loss: 0.3510 - f2_score: 0.9037 - val_loss: 0.4216 - val_f2_score: 0.8449 - lr: 1.0000e-04\n",
       "Epoch 16/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.3240 - f2_score: 0.9115 - val_loss: 0.2870 - val_f2_score: 0.9166 - lr: 1.0000e-04\n",
+      "500/500 [==============================] - 2s 5ms/step - loss: 0.3381 - f2_score: 0.9030 - val_loss: 0.4232 - val_f2_score: 0.8825 - lr: 1.0000e-04\n",
       "Epoch 17/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.3120 - f2_score: 0.9140 - val_loss: 0.2806 - val_f2_score: 0.9324 - lr: 1.0000e-04\n",
+      "500/500 [==============================] - 2s 5ms/step - loss: 0.3253 - f2_score: 0.9133 - val_loss: 0.4234 - val_f2_score: 0.8608 - lr: 1.0000e-04\n",
       "Epoch 18/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.3009 - f2_score: 0.9144 - val_loss: 0.2743 - val_f2_score: 0.9300 - lr: 1.0000e-04\n",
+      "500/500 [==============================] - 2s 5ms/step - loss: 0.3165 - f2_score: 0.9105 - val_loss: 0.4253 - val_f2_score: 0.8749 - lr: 1.0000e-04\n",
       "Epoch 19/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.2936 - f2_score: 0.9212 - val_loss: 0.2707 - val_f2_score: 0.8946 - lr: 1.0000e-04\n",
-      "Epoch 20/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.2778 - f2_score: 0.9272 - val_loss: 0.2502 - val_f2_score: 0.9270 - lr: 1.0000e-04\n",
-      "Epoch 21/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.2687 - f2_score: 0.9276 - val_loss: 0.2451 - val_f2_score: 0.9078 - lr: 1.0000e-04\n",
-      "Epoch 22/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.2650 - f2_score: 0.9270 - val_loss: 0.2299 - val_f2_score: 0.9316 - lr: 1.0000e-04\n",
-      "Epoch 23/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.2520 - f2_score: 0.9303 - val_loss: 0.2379 - val_f2_score: 0.9093 - lr: 1.0000e-04\n",
-      "Epoch 24/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.2443 - f2_score: 0.9346 - val_loss: 0.2125 - val_f2_score: 0.9696 - lr: 1.0000e-04\n",
-      "Epoch 25/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.2349 - f2_score: 0.9368 - val_loss: 0.2032 - val_f2_score: 0.9365 - lr: 1.0000e-04\n",
-      "Epoch 26/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.2271 - f2_score: 0.9390 - val_loss: 0.1875 - val_f2_score: 0.9687 - lr: 1.0000e-04\n",
-      "Epoch 27/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.2193 - f2_score: 0.9455 - val_loss: 0.1821 - val_f2_score: 0.9713 - lr: 1.0000e-04\n",
-      "Epoch 28/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.2185 - f2_score: 0.9424 - val_loss: 0.1759 - val_f2_score: 0.9553 - lr: 1.0000e-04\n",
-      "Epoch 29/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.2066 - f2_score: 0.9490 - val_loss: 0.1695 - val_f2_score: 0.9699 - lr: 1.0000e-04\n",
-      "Epoch 30/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.1964 - f2_score: 0.9525 - val_loss: 0.1573 - val_f2_score: 0.9755 - lr: 1.0000e-04\n",
-      "Epoch 31/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.1940 - f2_score: 0.9515 - val_loss: 0.1526 - val_f2_score: 0.9785 - lr: 1.0000e-04\n",
-      "Epoch 32/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.1850 - f2_score: 0.9560 - val_loss: 0.1626 - val_f2_score: 0.9560 - lr: 1.0000e-04\n",
-      "Epoch 33/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.1796 - f2_score: 0.9595 - val_loss: 0.1414 - val_f2_score: 0.9659 - lr: 1.0000e-04\n",
-      "Epoch 34/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.1721 - f2_score: 0.9598 - val_loss: 0.1384 - val_f2_score: 0.9836 - lr: 1.0000e-04\n",
-      "Epoch 35/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.1659 - f2_score: 0.9620 - val_loss: 0.1286 - val_f2_score: 0.9853 - lr: 1.0000e-04\n",
-      "Epoch 36/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.1659 - f2_score: 0.9596 - val_loss: 0.1293 - val_f2_score: 0.9831 - lr: 1.0000e-04\n",
-      "Epoch 37/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.1580 - f2_score: 0.9636 - val_loss: 0.1227 - val_f2_score: 0.9730 - lr: 1.0000e-04\n",
-      "Epoch 38/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.1496 - f2_score: 0.9701 - val_loss: 0.1174 - val_f2_score: 0.9865 - lr: 1.0000e-04\n",
-      "Epoch 39/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.1433 - f2_score: 0.9711 - val_loss: 0.1136 - val_f2_score: 0.9923 - lr: 1.0000e-04\n",
-      "Epoch 40/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.1403 - f2_score: 0.9726 - val_loss: 0.1042 - val_f2_score: 0.9936 - lr: 1.0000e-04\n",
-      "Epoch 41/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.1340 - f2_score: 0.9741 - val_loss: 0.1057 - val_f2_score: 0.9866 - lr: 1.0000e-04\n",
-      "Epoch 42/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.1328 - f2_score: 0.9757 - val_loss: 0.1027 - val_f2_score: 0.9906 - lr: 1.0000e-04\n",
-      "Epoch 43/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.1283 - f2_score: 0.9760 - val_loss: 0.0954 - val_f2_score: 0.9939 - lr: 1.0000e-04\n",
-      "Epoch 44/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.1234 - f2_score: 0.9773 - val_loss: 0.0933 - val_f2_score: 0.9962 - lr: 1.0000e-04\n",
-      "Epoch 45/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.1203 - f2_score: 0.9780 - val_loss: 0.0903 - val_f2_score: 0.9939 - lr: 1.0000e-04\n",
-      "Epoch 46/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.1165 - f2_score: 0.9795 - val_loss: 0.0863 - val_f2_score: 0.9948 - lr: 1.0000e-04\n",
-      "Epoch 47/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.1148 - f2_score: 0.9817 - val_loss: 0.0855 - val_f2_score: 0.9955 - lr: 1.0000e-04\n",
-      "Epoch 48/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.1127 - f2_score: 0.9824 - val_loss: 0.0806 - val_f2_score: 0.9971 - lr: 1.0000e-04\n",
-      "Epoch 49/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.1096 - f2_score: 0.9828 - val_loss: 0.0827 - val_f2_score: 0.9935 - lr: 1.0000e-04\n",
-      "Epoch 50/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.1111 - f2_score: 0.9805 - val_loss: 0.0809 - val_f2_score: 0.9946 - lr: 1.0000e-04\n",
-      "Epoch 51/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.1044 - f2_score: 0.9845 - val_loss: 0.0725 - val_f2_score: 0.9971 - lr: 1.0000e-04\n",
-      "Epoch 52/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.1002 - f2_score: 0.9841 - val_loss: 0.0714 - val_f2_score: 0.9965 - lr: 1.0000e-04\n",
-      "Epoch 53/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.0993 - f2_score: 0.9853 - val_loss: 0.0789 - val_f2_score: 0.9965 - lr: 1.0000e-04\n",
-      "Epoch 54/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.0971 - f2_score: 0.9856 - val_loss: 0.0757 - val_f2_score: 0.9976 - lr: 1.0000e-04\n",
-      "Epoch 55/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.0936 - f2_score: 0.9861 - val_loss: 0.0673 - val_f2_score: 0.9979 - lr: 1.0000e-04\n",
-      "Epoch 56/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.0900 - f2_score: 0.9881 - val_loss: 0.0647 - val_f2_score: 0.9994 - lr: 1.0000e-04\n",
-      "Epoch 57/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.0885 - f2_score: 0.9880 - val_loss: 0.0720 - val_f2_score: 0.9963 - lr: 1.0000e-04\n",
-      "Epoch 58/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.0868 - f2_score: 0.9890 - val_loss: 0.0682 - val_f2_score: 0.9951 - lr: 1.0000e-04\n",
-      "Epoch 59/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.0914 - f2_score: 0.9883 - val_loss: 0.0742 - val_f2_score: 0.9972 - lr: 1.0000e-04\n",
-      "Epoch 60/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.0872 - f2_score: 0.9904 - val_loss: 0.0636 - val_f2_score: 0.9994 - lr: 1.0000e-04\n",
-      "Epoch 61/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.0847 - f2_score: 0.9890 - val_loss: 0.0603 - val_f2_score: 0.9994 - lr: 1.0000e-04\n",
-      "Epoch 62/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.0779 - f2_score: 0.9913 - val_loss: 0.0594 - val_f2_score: 0.9993 - lr: 1.0000e-04\n",
-      "Epoch 63/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.0817 - f2_score: 0.9904 - val_loss: 0.0587 - val_f2_score: 0.9997 - lr: 1.0000e-04\n",
-      "Epoch 64/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.0802 - f2_score: 0.9912 - val_loss: 0.0559 - val_f2_score: 0.9993 - lr: 1.0000e-04\n",
-      "Epoch 65/100\n",
-      "500/500 [==============================] - 3s 6ms/step - loss: 0.0834 - f2_score: 0.9888 - val_loss: 0.0577 - val_f2_score: 0.9994 - lr: 1.0000e-04\n",
-      "Epoch 66/100\n",
-      "415/500 [=======================>......] - ETA: 0s - loss: 0.0773 - f2_score: 0.9908"
+      "441/500 [=========================>....] - ETA: 0s - loss: 0.3084 - f2_score: 0.9159"
      ]
     },
     {
