--- a/Make_stored_DATA/mels_cnn_1.ipynb
+++ b/Make_stored_DATA/mels_cnn_1.ipynb
@@ -17,33 +17,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "543ffe40-6504-4351-822d-c3879b17ff55",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import gc\n",
     "import glob\n",
     "import random\n",
     "import librosa\n",
-    "import IPython.display\n",
-    "import librosa.display\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "import tensorflow as tf\n",
-    "import matplotlib as plt\n",
-    "import IPython.display as ipd\n",
     "import matplotlib.pyplot as plt\n",
     "from tqdm import tqdm\n",
-    "from collections import Counter\n",
-    "from scipy.interpolate import interp1d\n",
-    "from scipy.signal import butter, lfilter\n",
-    "from imblearn.under_sampling import RandomUnderSampler\n",
-    "from sklearn.utils import shuffle\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.model_selection import train_test_split, KFold"
+    "from sklearn.model_selection import KFold\n",
+    "from imblearn.under_sampling import RandomUnderSampler"
    ]
   },
   {
@@ -56,13 +43,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2650,) (590,)\n"
+      "(2620,) (620,)\n"
      ]
     }
    ],
    "source": [
     "heart_sound_all = glob.glob('../../heart-new/training/*.wav')\n",
-    "heart_sound, heart_sound_test = heart_sound_all[:2650], heart_sound_all[2650:]\n",
+    "heart_sound, heart_sound_test = heart_sound_all[:2620], heart_sound_all[2620:]\n",
     "print(np.shape(heart_sound),np.shape(heart_sound_test))"
    ]
   },
@@ -76,7 +63,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2650,) (590,)\n"
+      "(2620,) (620,)\n"
      ]
     }
    ],
@@ -98,7 +85,7 @@
     "    return label_list\n",
     "\n",
     "LABEL_list_all = process_labels('label-all')\n",
-    "LABEL_list, LABEL_list_test = LABEL_list_all[:2650], LABEL_list_all[2650:]\n",
+    "LABEL_list, LABEL_list_test = LABEL_list_all[:2620], LABEL_list_all[2620:]\n",
     "LABEL_array, LABEL_array_test = np.array(LABEL_list), np.array(LABEL_list_test)\n",
     "print(np.shape(LABEL_array), np.shape(LABEL_array_test))"
    ]
@@ -210,23 +197,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                  \r"
+      "                                                                         \r"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPreprocessing train & validation dataset...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m DATA_array \u001b[38;5;241m=\u001b[39m load_data(heart_sound)\n\u001b[1;32m----> 3\u001b[0m Training_data, Training_label, augmented_data, augmented_label \u001b[38;5;241m=\u001b[39m \u001b[43maugment_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mDATA_array\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mLABEL_array\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m Training_data_preprocessed, Training_label_preprocessed \u001b[38;5;241m=\u001b[39m preprocessing(Training_data, Training_label)\n\u001b[0;32m      5\u001b[0m augmented_data_preprocessed, augmented_label_preprocessed \u001b[38;5;241m=\u001b[39m preprocessing(augmented_data, augmented_label, length\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10000\u001b[39m\u001b[38;5;241m-\u001b[39mnp\u001b[38;5;241m.\u001b[39mshape(Training_label_preprocessed)[\u001b[38;5;241m0\u001b[39m])\n",
-      "Cell \u001b[1;32mIn[5], line 23\u001b[0m, in \u001b[0;36maugment_data\u001b[1;34m(signals, labels, sr, fraction)\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m method \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtime_stretch\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m     22\u001b[0m     rate \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39mRandom(seed)\u001b[38;5;241m.\u001b[39muniform(\u001b[38;5;241m0.8\u001b[39m, \u001b[38;5;241m1.2\u001b[39m)\n\u001b[1;32m---> 23\u001b[0m     augmented_signal \u001b[38;5;241m=\u001b[39m \u001b[43mlibrosa\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43meffects\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtime_stretch\u001b[49m\u001b[43m(\u001b[49m\u001b[43msignal\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrate\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mrate\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m method \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124madd_noise\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m     25\u001b[0m     noise_factor \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39mRandom(seed)\u001b[38;5;241m.\u001b[39muniform(\u001b[38;5;241m0.001\u001b[39m, \u001b[38;5;241m0.01\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\bhuri\\anaconda3\\envs\\tensorflowgpu\\lib\\site-packages\\librosa\\effects.py:387\u001b[0m, in \u001b[0;36mtime_stretch\u001b[1;34m(y, rate, **kwargs)\u001b[0m\n\u001b[0;32m    384\u001b[0m stft \u001b[38;5;241m=\u001b[39m core\u001b[38;5;241m.\u001b[39mstft(y, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    386\u001b[0m \u001b[38;5;66;03m# Stretch by phase vocoding\u001b[39;00m\n\u001b[1;32m--> 387\u001b[0m stft_stretch \u001b[38;5;241m=\u001b[39m \u001b[43mcore\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mphase_vocoder\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    388\u001b[0m \u001b[43m    \u001b[49m\u001b[43mstft\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    389\u001b[0m \u001b[43m    \u001b[49m\u001b[43mrate\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mrate\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    390\u001b[0m \u001b[43m    \u001b[49m\u001b[43mhop_length\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mhop_length\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    391\u001b[0m \u001b[43m    \u001b[49m\u001b[43mn_fft\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mn_fft\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    392\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    394\u001b[0m \u001b[38;5;66;03m# Predict the length of y_stretch\u001b[39;00m\n\u001b[0;32m    395\u001b[0m len_stretch \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28mround\u001b[39m(y\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m/\u001b[39m rate))\n",
-      "File \u001b[1;32mc:\\Users\\bhuri\\anaconda3\\envs\\tensorflowgpu\\lib\\site-packages\\librosa\\core\\spectrum.py:1462\u001b[0m, in \u001b[0;36mphase_vocoder\u001b[1;34m(D, rate, hop_length, n_fft)\u001b[0m\n\u001b[0;32m   1459\u001b[0m mag \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m1.0\u001b[39m \u001b[38;5;241m-\u001b[39m alpha) \u001b[38;5;241m*\u001b[39m np\u001b[38;5;241m.\u001b[39mabs(columns[\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m, \u001b[38;5;241m0\u001b[39m]) \u001b[38;5;241m+\u001b[39m alpha \u001b[38;5;241m*\u001b[39m np\u001b[38;5;241m.\u001b[39mabs(columns[\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m, \u001b[38;5;241m1\u001b[39m])\n\u001b[0;32m   1461\u001b[0m \u001b[38;5;66;03m# Store to output array\u001b[39;00m\n\u001b[1;32m-> 1462\u001b[0m d_stretch[\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m, t] \u001b[38;5;241m=\u001b[39m \u001b[43mutil\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mphasor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mphase_acc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmag\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmag\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1464\u001b[0m \u001b[38;5;66;03m# Compute phase advance\u001b[39;00m\n\u001b[0;32m   1465\u001b[0m dphase \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mangle(columns[\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m, \u001b[38;5;241m1\u001b[39m]) \u001b[38;5;241m-\u001b[39m np\u001b[38;5;241m.\u001b[39mangle(columns[\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m, \u001b[38;5;241m0\u001b[39m]) \u001b[38;5;241m-\u001b[39m phi_advance\n",
-      "File \u001b[1;32mc:\\Users\\bhuri\\anaconda3\\envs\\tensorflowgpu\\lib\\site-packages\\librosa\\util\\utils.py:2582\u001b[0m, in \u001b[0;36mphasor\u001b[1;34m(angles, mag)\u001b[0m\n\u001b[0;32m   2524\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mphasor\u001b[39m(\n\u001b[0;32m   2525\u001b[0m     angles: Union[np\u001b[38;5;241m.\u001b[39mndarray, _Real],\n\u001b[0;32m   2526\u001b[0m     \u001b[38;5;241m*\u001b[39m,\n\u001b[0;32m   2527\u001b[0m     mag: Optional[Union[np\u001b[38;5;241m.\u001b[39mndarray, _Number]] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m   2528\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Union[np\u001b[38;5;241m.\u001b[39mndarray, np\u001b[38;5;241m.\u001b[39mcomplex_]:\n\u001b[0;32m   2529\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Construct a complex phasor representation from angles.\u001b[39;00m\n\u001b[0;32m   2530\u001b[0m \n\u001b[0;32m   2531\u001b[0m \u001b[38;5;124;03m    When `mag` is not provided, this is equivalent to:\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   2580\u001b[0m \u001b[38;5;124;03m    array([5.000e-01+0.j , 9.185e-17+1.5j])\u001b[39;00m\n\u001b[0;32m   2581\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m-> 2582\u001b[0m     z \u001b[38;5;241m=\u001b[39m \u001b[43m_phasor_angles\u001b[49m\u001b[43m(\u001b[49m\u001b[43mangles\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   2584\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m mag \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m   2585\u001b[0m         z \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m=\u001b[39m mag\n",
-      "File \u001b[1;32mc:\\Users\\bhuri\\anaconda3\\envs\\tensorflowgpu\\lib\\site-packages\\numba\\np\\ufunc\\dufunc.py:288\u001b[0m, in \u001b[0;36mDUFunc.__call__\u001b[1;34m(self, *args, **kws)\u001b[0m\n\u001b[0;32m    286\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m output\n\u001b[0;32m    287\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 288\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__call__\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkws)\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessing and fold assignment complete!\n"
      ]
     }
    ],
@@ -235,7 +213,7 @@
     "DATA_array = load_data(heart_sound)\n",
     "Training_data, Training_label, augmented_data, augmented_label = augment_data(DATA_array, LABEL_array)\n",
     "Training_data_preprocessed, Training_label_preprocessed = preprocessing(Training_data, Training_label)\n",
-    "augmented_data_preprocessed, augmented_label_preprocessed = preprocessing(augmented_data, augmented_label, length=10000-np.shape(Training_label_preprocessed)[0])\n",
+    "augmented_data_preprocessed, augmented_label_preprocessed = preprocessing(augmented_data, augmented_label, length=9000-np.shape(Training_label_preprocessed)[0])\n",
     "DATA = np.concatenate([Training_data_preprocessed, augmented_data_preprocessed], axis=0)\n",
     "LABEL = np.array(Training_label_preprocessed + augmented_label_preprocessed, dtype=np.int32)\n",
     "\n",
@@ -259,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "dd9e8c2e",
    "metadata": {},
    "outputs": [
@@ -274,14 +252,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                       "
+      "                                                                        "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(863, 256, 4, 1)\n",
       "Preprocessing complete!\n"
      ]
     },
@@ -296,14 +273,13 @@
    "source": [
     "print(\"Preprocessing test dataset...\")\n",
     "DATA_array_test = load_data(heart_sound_test)\n",
-    "Test_data, Test_label = preprocessing(DATA_array_test, LABEL_array_test)\n",
-    "print(np.shape(Test_data))\n",
+    "Test_data, Test_label = preprocessing(DATA_array_test, LABEL_array_test, length=1000)\n",
     "print(\"Preprocessing complete!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3cfe7517-c9ca-41ff-94da-ccddfc60f1b1",
    "metadata": {},
    "outputs": [
@@ -311,10 +287,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5, 8000, 256, 4, 1)\n",
-      "(5, 8000)\n",
-      "(5, 2000, 256, 4, 1)\n",
-      "(5, 2000)\n"
+      "(5, 7200, 256, 4, 1)\n",
+      "(5, 7200)\n",
+      "(5, 1800, 256, 4, 1)\n",
+      "(5, 1800)\n",
+      "(1000, 256, 4, 1)\n",
+      "(1000,)\n"
      ]
     }
    ],
@@ -330,7 +308,9 @@
     "print(np.shape(EVERY_Fold_data_train_download))\n",
     "print(np.shape(EVERY_Fold_label_train_download))\n",
     "print(np.shape(EVERY_Fold_data_val_download))\n",
-    "print(np.shape(EVERY_Fold_label_val_download))"
+    "print(np.shape(EVERY_Fold_label_val_download))\n",
+    "print(np.shape(Test_data))\n",
+    "print(np.shape(Test_label))"
    ]
   },
   {
@@ -343,20 +323,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train data have lebel normal : 49.92% and have lebel abnormal : 50.08%\n",
-      "Validation data have lebel normal : 50.65% and have lebel abnormal : 49.35%\n"
+      "Train data have lebel normal : 49.58% and have lebel abnormal : 50.42%\n",
+      "Validation data have lebel normal : 49.94% and have lebel abnormal : 50.06%\n",
+      "Validation data have lebel normal : 50.20% and have lebel abnormal : 49.80%\n"
      ]
     }
    ],
    "source": [
     "train_fraction , val_fraction = len(LABEL)*(k-1)/(100*k) , len(LABEL)/(100*k)\n",
     "print(f'Train data have lebel normal : {(list(EVERY_Fold_label_train_download[0]).count(0))/train_fraction:.2f}% and have lebel abnormal : {(list(EVERY_Fold_label_train_download[0]).count(1))/train_fraction:.2f}%')\n",
-    "print(f'Validation data have lebel normal : {(list(EVERY_Fold_label_val_download[0]).count(0))/val_fraction:.2f}% and have lebel abnormal : {(list(EVERY_Fold_label_val_download[0]).count(1))/val_fraction:.2f}%')"
+    "print(f'Validation data have lebel normal : {(list(EVERY_Fold_label_val_download[0]).count(0))/val_fraction:.2f}% and have lebel abnormal : {(list(EVERY_Fold_label_val_download[0]).count(1))/val_fraction:.2f}%')\n",
+    "print(f'Test data have lebel normal : {100*(list(Test_label).count(0))/len(Test_label):.2f}% and have lebel abnormal : {100*(list(Test_label).count(1))/len(Test_label):.2f}%')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "6b170e14-d478-4827-b68c-c7148342e482",
    "metadata": {},
    "outputs": [],
@@ -364,7 +346,9 @@
     "np.save(f'{DATA_type}/Train_data.npy', EVERY_Fold_data_train_download)\n",
     "np.save(f'{DATA_type}/Train_lebel.npy', EVERY_Fold_label_train_download)\n",
     "np.save(f'{DATA_type}/Val_data.npy', EVERY_Fold_data_val_download)\n",
-    "np.save(f'{DATA_type}/Val_lebel.npy', EVERY_Fold_label_val_download)"
+    "np.save(f'{DATA_type}/Val_lebel.npy', EVERY_Fold_label_val_download)\n",
+    "np.save(f'{DATA_type}/Test_data.npy', Test_data)\n",
+    "np.save(f'{DATA_type}/Test_lebel.npy', Test_label)"
    ]
   }
  ],
